# Project_05

./: CMakeLists.txt  DatalogProgram.cpp  DatalogProgram.h  Graph.cpp  Graph.h  Makefile  Node.cpp  Node.h  Parameter.cpp  Parameter.h  Predicate.cpp  Predicate.h  Relation.cpp  Relation.h  Rule.cpp  Rule.h  Tuple.cpp  Tuple.h  actual.txt  join_test.cpp  lab4  lab5  lab5_graph  main.cpp  main.h  main_2.cpp  project_test.cpp  rename_test.cpp  state_transitions.cpp  tokenizer.cpp  union_test.cpp
project4_tests/: in88.txt  inEX1.txt  inHS.txt  inP3.txt
test_properties/: join_test.cpp  project_test.cpp  rename_test.cpp  select_test.cpp  union_test.cpp
